# fild

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: publish.yml  pylint.yml  release.yml  test.yml
docs/source/: conf.py  index.rst  usage.rst
fild/process/: common.py  dictionary.py
fild/sdk/: array.py  dates.py  dictionary.py  fakeable.py  types.py
fild/tests/test_data_generators/: test_full_param.py  test_generate.py  test_generated.py  test_instance.py  test_name.py  test_required_param.py  test_value.py  test_with_values.py
fild/tests/test_instances/: test_allowed_none_param.py  test_full_param.py  test_generated.py  test_instance.py  test_name.py  test_required_param.py  test_value.py
process/: dictionary.py
requirements/: common.txt  test.txt
sdk/: __init__.py  array.py  dictionary.py  field.py  types.py
src/fild/process/: common.py  dictionary.py
src/fild/sdk/: __init__.py  array.py  base_enum.py  dates.py  dictionary.py  fakeable.py  field.py  types.py
src/tests/test_data_generators/: test_generate.py  test_required_param.py  test_value.py
src/tests/test_instances/: test_allowed_none_param.py  test_required_param.py
tests/: data.py
tests/process/: test_dictionary.py  test_is_callable_with_strict_args.py
tests/sdk/: test_array.py  test_base_enum.py  test_dates.py  test_dictionary.py  test_fakeable.py  test_field.py  test_types.py
tests/test_data_generators/: test_full_param.py  test_full_value.py  test_generate.py  test_generated.py  test_instance.py  test_name.py  test_required_param.py  test_value.py  test_with_values.py
tests/test_instances/: test_allowed_none_param.py  test_full_param.py  test_generated.py  test_instance.py  test_name.py  test_required_param.py  test_value.py
