[metadata]
name = fild
version = 0.1.4
author = Elena Kulgavaya
author_email = elena.kulgavaya@gmail.com
description = Library to describe contracts and generate data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elenakulgavaya/fild
project_urls =
    Bug Tracker = https://github.com/elenakulgavaya/fild/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.7
install_requires =
    Faker ==11.3.0
    pytz ==2021.3

[options.packages.find]
where = src
